Blender Crashes when UV Editing #41201

Closed
opened 2014-07-27 01:16:26 +02:00 by Gregory A Lundberg · 8 comments

System Information
Windows 8 .. if you want to know more you'll need to tell me where the heck Blender saves the Help/System Info file. You don't document it and I can't find it.

Blender Version
Broken: 2.71

Blender crashes when editing a UV map.

  1. Start Blender 2.71
  2. Switch to UV Editing window layout
  3. Switch to Edit mode
  4. Select Shading U/Vs tab
  5. Create a UV map. Any will do. Cube projection / Scale to Bounds works well for an example.
  6. Select ONE UV face.
  7. Enable SNAP for UV Element, select Snap to Vertex.
  8. Press G to grab/translate the selected face.
  9. Drag to snap to a vertex at another position. DO NOT FINALIZE the drag (ie, don't left-click)
  10. Be a normal user .. forget you're dragging a part of the UV map and press "A" to select all.
  11. Say "Well, damn, there goes a few hours of work!" when Blender disappears from your screen.
**System Information** Windows 8 .. if you want to know more you'll need to tell me where the heck Blender saves the Help/System Info file. You don't document it and I can't find it. **Blender Version** Broken: 2.71 Blender crashes when editing a UV map. 1) Start Blender 2.71 2) Switch to UV Editing window layout 3) Switch to Edit mode 4) Select Shading U/Vs tab 5) Create a UV map. Any will do. Cube projection / Scale to Bounds works well for an example. 6) Select ONE UV face. 7) Enable SNAP for UV Element, select Snap to Vertex. 8) Press G to grab/translate the selected face. 9) Drag to snap to a vertex at another position. DO NOT FINALIZE the drag (ie, don't left-click) 10) Be a normal user .. forget you're dragging a part of the UV map and press "A" to select all. 11) Say "Well, damn, there goes a few hours of work!" when Blender disappears from your screen.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Tad.Carlucci

Added subscriber: @Tad.Carlucci

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

The "Help -> System Info" file should be in Blender! (Namely, in the Text Editor). Also be sure to always include a blendfile. Anyway, here's mine: #41201.blend

I'm getting:

Program received signal SIGSEGV, Segmentation fault.
0x0000000002954fbc in mul_v4_m4v4 (r=0x7fffffffdbf0, mat=0xc0, v=0x7fffffffdbf0) at /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/math_matrix.c:522
522           r[0] = x * mat[0][0] + y * mat[1][0] + z * mat[2][0] + mat[3][0] * v[3];

And here's a backtrace: bt.txt

The "Help -> System Info" file should be in Blender! (Namely, in the Text Editor). Also be sure to always include a blendfile. Anyway, here's mine: [#41201.blend](https://archive.blender.org/developer/F99767/T41201.blend) I'm getting: ``` Program received signal SIGSEGV, Segmentation fault. 0x0000000002954fbc in mul_v4_m4v4 (r=0x7fffffffdbf0, mat=0xc0, v=0x7fffffffdbf0) at /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/math_matrix.c:522 522 r[0] = x * mat[0][0] + y * mat[1][0] + z * mat[2][0] + mat[3][0] * v[3]; ``` And here's a backtrace: [bt.txt](https://archive.blender.org/developer/F99768/bt.txt)

Blender says it created a file, so I looked for a file. The web page documentation does not even mention the menu selection, much less tell you it's not really a file (that's what you mean, right?) and you'll need to open something in Blender to find it. Since I only use Blender for modelling, I have no idea where or how to open a text file, nor how to find a non-file text file created internally. I did look, first, and would have included it if I could find it.

Why include the default scene? It seems to me that every copy of Blender comes with it.

Blender says it created a file, so I looked for a file. The web page documentation does not even mention the menu selection, much less tell you it's not really a file (that's what you mean, right?) and you'll need to open something in Blender to find it. Since I only use Blender for modelling, I have no idea where or how to open a text file, nor how to find a non-file text file created internally. I did look, first, and would have included it if I could find it. Why include the default scene? It seems to me that every copy of Blender comes with it.

This issue was referenced by d49b86d0f9

This issue was referenced by d49b86d0f95117e29d107071b46dce9dbc4b2da8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d49b86d0f9.

Closed by commit d49b86d0f9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41201
No description provided.